Allow multiple custom options
Extend the functionality so that the user can, in the config, have multiple custom options (each with different supplementalSearchText).

--- a/anki-filtered-deck-by-tag/config.json
+++ b/anki-filtered-deck-by-tag/config.json
@@ -1,5 +1,6 @@
 {
-	"supplementalSearchText": "(is:due OR is:new)",
+	"supplementalSearchTexts": [],
+	"shortNames": [],
 	"numCards": 300,
 	"unsuspendAutomatically": true
 }
