Add default order
Create a configuration option for the default order that filtered decks will use

--- a/anki-filtered-deck-by-tag/config.json
+++ b/anki-filtered-deck-by-tag/config.json
@@ -2,5 +2,6 @@
 	"supplementalSearchTexts": [],
 	"shortNames": [],
 	"numCards": 9999,
-	"unsuspendAutomatically": true
+	"unsuspendAutomatically": true,
+	"defaultOrder": 6
 }
