allow multiple tag string delimeters with user config

--- a/anki-filtered-deck-by-tag/config.json
+++ b/anki-filtered-deck-by-tag/config.json
@@ -3,5 +3,6 @@
 	"shortNames": [],
 	"numCards": 9999,
 	"unsuspendAutomatically": true,
-	"defaultOrder": 6
+	"defaultOrder": 6,
+	"tag-delims": "_|\.|-|,|\|"
 }
